--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h2>Make and learn what is a smallworld</h2>
         <a href="https://github.com/PhoenixAlx/SmallWorld" class="button"><small>View project on</small> GitHub</a>
         
-        		<section id="Herramienta">
+        		<div id="Herramienta">
 			
 			He construido una herramienta para que veas como se crea una red de este tipo. Tendras que empezar añadiendo un número de nodos, mínimo 3. Al pulsar sobre generar se creará una red de este tipo siguiendo el algoritmo de Barabási–Albert ( he usado porque me parecía el más sencillo e intuitivo)
 			http://es.wikipedia.org/wiki/Modelo_Barab%C3%A1si%E2%80%93Albert
@@ -74,7 +74,7 @@
 			</div>
 			
 		  </div>
-		</section>
+		</div>
 		
 	  
       <script type="text/javascript">
