--- a/index.html
+++ b/index.html
@@ -23,7 +23,18 @@
         <h2>Make and learn what is a smallworld</h2>
         <a href="https://github.com/PhoenixAlx/SmallWorld" class="button"><small>View project on</small> GitHub</a>
         
-        		<div id="Herramienta">
+       
+    </header>
+
+    <div id="content-wrapper">
+      <div class="inner clearfix">
+        <section id="main-content">
+          <h1>
+<a id="smallworld" class="anchor" href="#smallworld" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>SmallWorld</h1>
+
+<p>Make and learn what is a smallworld</p>
+        </section>
+<section id="Herramienta">
 			
 			He construido una herramienta para que veas como se crea una red de este tipo. Tendras que empezar añadiendo un número de nodos, mínimo 3. Al pulsar sobre generar se creará una red de este tipo siguiendo el algoritmo de Barabási–Albert ( he usado porque me parecía el más sencillo e intuitivo)
 			http://es.wikipedia.org/wiki/Modelo_Barab%C3%A1si%E2%80%93Albert
@@ -74,7 +85,7 @@
 			</div>
 			
 		  </div>
-		</div>
+		</section>
 		
 	  
       <script type="text/javascript">
@@ -678,18 +689,6 @@
 			  return array;
 			}
        </script>
-      </div>
-    </header>
-
-    <div id="content-wrapper">
-      <div class="inner clearfix">
-        <section id="main-content">
-          <h1>
-<a id="smallworld" class="anchor" href="#smallworld" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>SmallWorld</h1>
-
-<p>Make and learn what is a smallworld</p>
-        </section>
-
         <aside id="sidebar">
           <a href="https://github.com/PhoenixAlx/SmallWorld/zipball/master" class="button">
             <small>Download</small>
